<resources>
    <string name="app_name">BeislRallye</string>

    <string name="description_location_type">Welche Beisln willst du besuchen? </string>
    <string name="description_location_count">Wie viele Beisl sollen wir für dich finden?</string>
    <string name="description_start_point">Wo ist der Ausgangspunkt der Rallye? </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_places_preview">PlacesPreviewActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_consumption">ConsumptionActivity</string>
    <string name="title_activity_summary"></string>

    <string name="location_not_active">Location Services nicht aktiviert</string>
    <string name="enable_location">Bitte aktivieren Sie die Location Services und GPS</string>

    <string name="error_amount">Bitte die gewünschte Anzahl an Beisln angeben</string>
    <string name="error_type">Bitte mindestens einen Beisl-Typ auswählen</string>

    <string name="address">Adresse</string>

    <string name="calc_rallye">Ralley Berechnen</string>

    <string name="hello_world">Hello world!</string>
    <string name="summary">Zusammenfassung</string>
    <string name="consumtion">Konsum</string>
    <string name="start">Start: </string>
    <string name="end">Ende: </string>
    <string name="duration">Dauer: </string>
    <string name="beer">Bier</string>
    <string name="cocktail">Cocktail</string>
    <string name="wine">Wein</string>
    <string name="shot">Shot</string>
    <string name="other">Andere</string>
    <string name="want_quit">Möchtest du wirklich zurück gehen? Dann wird die Rallye beendet.</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
</resources>
