<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="at.tugraz.beislrallye.SummaryActivity"
    android:id="@+id/summary_layout"
    android:orientation="vertical">

    <TextView
        android:text="@string/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@android:color/secondary_text_light"
        android:id="@+id/start_tv"
        android:text="@string/start"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@android:color/secondary_text_light"
        android:id="@+id/end_tv"
        android:text="@string/end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@android:color/secondary_text_light"
        android:id="@+id/duration_tv"
        android:text="@string/duration"/>

    <TextView
        android:text="@string/consumtion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"/>


</LinearLayout>
