<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="at.tugraz.beislrallye.ConsumptionActivity">


    <ListView
        android:id="@+id/consumption_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/floatingActionMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        fab:fab_addButtonColorNormal="@color/colorPrimaryDark"
        fab:fab_addButtonColorPressed="@color/colorPrimaryMedium"
        fab:fab_addButtonPlusIconColor="@color/colorWhite"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@android:color/white"
            android:onClick="fabClicked"
            fab:fab_title="@string/beer"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/drink_beer"
            fab:fab_colorPressed="@color/colorWhitePressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fabClicked"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_size="mini"
            fab:fab_title="@string/wine"
            fab:fab_labelsPosition="left"
            fab:fab_icon="@drawable/drink_wine"
            fab:fab_colorPressed="@color/colorWhitePressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fabClicked"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/drink_shot"
            fab:fab_title="@string/shot"
            fab:fab_colorPressed="@color/colorWhitePressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fabClicked"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_size="mini"
            fab:fab_title="@string/cocktail"
            fab:fab_icon="@drawable/drink_cocktail"
            fab:fab_colorPressed="@color/colorWhitePressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fabClicked"
            fab:fab_colorNormal="@android:color/white"
            fab:fab_size="mini"
            fab:fab_title="@string/other"
            fab:fab_icon="@drawable/drink_other"
            fab:fab_colorPressed="@color/colorWhitePressed"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>
